--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <main class=container>
         <section class="row">
             <article class="col-sm-6 article-bild">
-                <img class="bild" src="/assets/img/bild-gustav.jpg" alt="Bild på Gustav">
+                <img class="bild" src="bild-gustav.jpg" alt="Bild på Gustav">
             </article>
             <article class="col-sm-6 article-lite-om-mig">
                 <h1>Gustav Ehnvik</h1>
