Moved css and image file back again

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/bc5eefc1c7.js" crossorigin="anonymous"></script>        
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Gustav Ehnvik Portfölj</title>
 </head>
 
@@ -52,7 +52,7 @@
     <main class=container>
         <section class="row">
             <article class="col-sm-6 article-bild">
-                <img class="bild" src="/assets/img/bild-gustav.jpg" alt="Bild på Gustav">
+                <img class="bild" src="bild-gustav.jpg" alt="Bild på Gustav">
             </article>
             <article class="col-sm-6 article-lite-om-mig">
                 <h1>Gustav Ehnvik</h1>
