--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+
+    <!-- Header -->
     <header class="container-fluid">
         <nav class="navbar navbar-expand-sm">
             <a  class="navbar-brand" href="index.html"><i class="fa-solid fa-briefcase fa-xl"></i></a>
@@ -49,6 +51,7 @@
         </nav>
     </header>
     
+    <!-- Main -->
     <main class=container>
         <section class="row">
             <article class="col-sm-6 article-bild">
@@ -69,7 +72,7 @@
         </section>
     </main>
 
-
+    <!-- Footer -->
     <footer class="container-fluid">
         <section id="footer-details" class="row">
             <article class="col-sm-4 footer-padding">
@@ -133,6 +136,8 @@
             </article>
         </section>
     </footer>
+
+    <!-- Bootstrap Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
