created assets folder and moved files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/bc5eefc1c7.js" crossorigin="anonymous"></script>        
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <title>Gustav Ehnvik Portfölj</title>
 </head>
 
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="kontakt.html">Kontakt</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="gustav-ehnvik-cv.pdf" target="_blank">CV</a>
+                        <a class="nav-link" href="/assets/cv/gustav-ehnvik-cv.pdf" target="_blank">CV</a>
                     </li>
                 </ul>
                 
@@ -55,7 +55,7 @@
     <main class=container>
         <section class="row">
             <article class="col-sm-6 article-bild">
-                <img class="bild" src="bild-gustav.jpg" alt="Bild på Gustav">
+                <img class="bild" src="/assets/img/bild-gustav.jpg" alt="Bild på Gustav">
             </article>
             <article class="col-sm-6 article-lite-om-mig">
                 <h1>Gustav Ehnvik</h1>
@@ -87,7 +87,7 @@
                 <h5 class="uppercase general-sub">CV</h5>
                 <p class="inline-block">
                     Intresserad av mitt CV? Ladda ner det här:
-                    <a href="assets/cv/gustav-ehnvik-cv.pdf" target="_blank" class="cv-pdf">
+                    <a href="/assets/cv/gustav-ehnvik-cv.pdf" target="_blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Länk till CV.</span>
                     </a>
