--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="kontakt.html">Kontakt</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="gustav-ehnvik-cv.pdf" target="_blank">CV</a>
+                        <a class="nav-link" href="/assets/cv/gustav-ehnvik-cv.pdf" target="_blank">CV</a>
                     </li>
                 </ul>
                 
