--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="kontakt.html">Kontakt</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="/assets/cv/gustav-ehnvik-cv.pdf" target="_blank">CV</a>
+                        <a class="nav-link" href="./assets/cv/gustav-ehnvik-cv.pdf" target="_blank">CV</a>
                     </li>
                 </ul>
                 
@@ -132,7 +132,7 @@
                 <h5 class="uppercase general-sub">CV</h5>
                 <p class="inline-block">
                     Intresserad av mitt CV? Ladda ner det här.
-                    <a href="assets/cv/gustav-ehnvik-cv.pdf" target="_blank" class="cv-pdf">
+                    <a href=".assets/cv/gustav-ehnvik-cv.pdf" target="_blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Länk till CV.</span>
                     </a>
