Added animation rotate on h1 element

--- a/index.html
+++ b/index.html
@@ -58,7 +58,20 @@
                 <img class="bild" src="./assets/img/bild-gustav.jpg" alt="Bild på Gustav">
             </article>
             <article class="col-sm-6 article-lite-om-mig">
-                <h1>Gustav Ehnvik</h1>
+                <h1 class="row">
+                <div class="g col-1">g</div>
+                <div class="u col-1">u</div>
+                <div class="s col-1">s</div>
+                <div class="t col-1">t</div>
+                <div class="a col-1">a</div>
+                <div class="v border-right col-1">v</div>
+                <div class="e col-1">e</div>
+                <div class="h col-1">h</div>
+                <div class="n col-1">n</div>
+                <div class="v col-1">v</div>
+                <div class="i col-1">i</div> 
+                <div class="k col-1">k</div>
+                </h1>
                 <h4 class="lite-om-mig"><span class="logo"><i class="fa-solid fa-circle-question"></i></span>Lite om mig...</h4>
                 <p>Hej! Mitt namn är Gustav Ehnvik. Jag är 27 år gammal och bor med min sambo i Bromma. Jag studerar idag till
                 webbutvecklare inom e-handel på Medieinstitutet. Utbildningen är på 2 år. När jag är klar med utbildningen så kommer jag
